# Orbit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  README.md
src/: app.rs  db.rs  discovery.rs  lib.rs  main.rs  models.rs  rt.rs
src/adapters/: appimage.rs  dnf.rs  dpkg.rs  flatpak.rs  mod.rs  snap.rs
