[package]
name = "orbit"
version = "0.1.0"
edition = "2024"
description = "Unified application footprint manager for Linux desktop"
authors = ["Orbit Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbit/app-manager"

[dependencies]
gtk = { version = "0.11.3", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_5"] }
glib = { version = "0.22", features = ["v2_80"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
glob = "0.3"
sysinfo = "0.31"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6.0"
thiserror = "2.0"
zbus = "5.0"
